src/test/ui/borrowck/issue-54499-field-mutation-of-moved-out-with-mut.nll.stderr
error[E0382]: assign to part of moved value: `t`
  --> $DIR/issue-54499-field-mutation-of-moved-out-with-mut.rs:23:9
   |
LL |         drop(t);
   |              - value moved here
LL |         t.0 = S(1);
   |         ^^^^^^^^^^ value partially assigned here after move
   |
   = note: move occurs because `t` has type `(S, i32)`, which does not implement the `Copy` trait

error[E0382]: assign to part of moved value: `u`
  --> $DIR/issue-54499-field-mutation-of-moved-out-with-mut.rs:31:9
   |
LL |         drop(u);
   |              - value moved here
LL |         u.0 = S(1);
   |         ^^^^^^^^^^ value partially assigned here after move
   |
   = note: move occurs because `u` has type `Tpair`, which does not implement the `Copy` trait

error[E0382]: assign to part of moved value: `v`
  --> $DIR/issue-54499-field-mutation-of-moved-out-with-mut.rs:39:9
   |
LL |         drop(v);
   |              - value moved here
LL |         v.x = S(1);
   |         ^^^^^^^^^^ value partially assigned here after move
   |
   = note: move occurs because `v` has type `Spair`, which does not implement the `Copy` trait

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0382`.
